--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 **/SMIC/weights_late_microexpfusenet/
-**/SMIC/weights_microexpstcnn/
+**/SMIC/weights_SMIC/
 **/SMIC/numpy_validation_datasets/
 **/SMIC/numpy_training_datasets/
