--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 **/SMIC/numpy_validation_datasets/
 **/SMIC/numpy_training_datasets/
 **/.idea/
+**/CAS(ME)2/weights_late_microexpfusenet/
+**/CAS(ME)2/weights_CAS(ME)2/
+**/CAS(ME)2/numpy_validation_datasets/
+**/CAS(ME)2/numpy_training_datasets/
