--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@
 **/SAMM/weights_SAMM/
 **/SAMM/numpy_validation_datasets/
 **/SAMM/numpy_training_datasets/
+**/CASMEII/weights_late_microexpfusenet/
+**/CASMEII/weights_SAMM/
+**/CASMEII/numpy_validation_datasets/
+**/CASMEII/numpy_training_datasets/
