--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,6 @@
 **/SAMM/numpy_validation_datasets/
 **/SAMM/numpy_training_datasets/
 **/CASMEII/weights_late_microexpfusenet/
-**/CASMEII/weights_SAMM/
+**/CASMEII/weights_CASMEII/
 **/CASMEII/numpy_validation_datasets/
 **/CASMEII/numpy_training_datasets/
